<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ZiskajZadaneMerania"
    tools:ignore="UselessParent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tabulka_hodnota"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:width="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tabulka_deltax"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tabulka_deltax2"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tabulka_deltax_percent"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exponenty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="4" >

            <TextView
                android:id="@+id/hlavny_exponent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delta2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delta_percent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/deltax_percent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/meraniaVyhodnotene"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

        </LinearLayout>

        <LinearLayout
            android:id="@+id/priemer_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="4"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/priemer_nadpis"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:text="@string/vyhodnotenie_priemer" />

            <TextView
                android:id="@+id/priemer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="2"
                android:gravity="right|center_vertical"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="#323232"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="2"
                android:text="@string/vyhodnotenie_delta_priemer" />

            <TextView
                android:id="@+id/priemer_delta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="2"
                android:gravity="right|center_vertical"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:text="@string/vyhodnotenie_kvad_chyba" />

            <TextView
                android:id="@+id/kvad_chyba"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="2"
                android:gravity="right|center_vertical"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="#323232"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                 android:text="@string/vyhodnotenie_pravdepodobna_chyba" />

            <TextView
                android:id="@+id/pravdepodobna_chyba"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="2"
                android:gravity="right|center_vertical"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:text="@string/vyhodnotenie_maximalna_chyba" />

            <TextView
                android:id="@+id/maximalna_chyba"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="2"
                android:gravity="right|center_vertical"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="#323232"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/vyhodnotenie_vysledok"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vysledna_hodnota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:gravity="right|center_vertical"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
